--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        use_sql_comments: true
 logging.level:
   org.hibernate.SQL: debug
